mithril/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mithril-service
  labels:
    app: mithril
spec:
  ports:
    - port: 80
      targetPort: 4000
  selector:
    app: mithril
