mithril/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mithril-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/limit-rps: "1"
    nginx.ingress.kubernetes.io/limit-connections: "5"
  labels:
    app: mithril
spec:
  ingressClassName: nginx
  rules:
    - host: api.vatusa.net
      http:
        paths:
          - backend:
              service:
                name: mithril-service
                port:
                  number: 80
            path: /v3(/|$)(.*)
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - api.vatusa.net
      secretName: mithril-tls
